--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,21 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+member-details.cell.flat-no=0
+member-details.cell.mobile-no=1
+member-details.cell.email-id=2
+member-details.cell.max-cells=3
+
+
+payment-details.cell.voucher-no-cell=2
+payment-details.cell.rcvd-date-cell=3
+payment-details.cell.amount-cell=4
+payment-details.cell.cheque-no-cell=5
+payment-details.cell.flat-no-cell=15
+payment-details.cell.max-cells=16
+
+logging.path=./logs
+
 
 payment.mail.enabled=true
 payment.mail.subject=Green County Phase - 1 Payment Notification
@@ -21,5 +36,3 @@ payment.sms.sender=GRCOP1
 payment.sms.body.received-notification=Payment of Rs. $$[payment-amount]/- for [flat-no] has been received on $$[received-date]. Credit is subjected to cheque clearance.
 payment.sms.body.thank-you-notification=- Green County Phase - 1 Co-op. Soc.
 payment.sms.test-local-url=https://api.textlocal.in/send/
-
-logging.path=./logs
