--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -1,6 +1,16 @@
 # place-holders
 # $$[payment-amount]  $$[cheque-no]   $$[flat-no]
 
-#payment.mail.subject=Green County Phase - 1 Payment Notification
-#payment.mail.body.received-notification=Payment of $$[payment-amount]/- received on $$[received-date] via transaction no. / cheque no. $$[cheque-no] for Green County Phase -1 Flat No. $$[flat-no].
-#payment.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
+payment.mail.enabled=true
+payment.mail.subject=Green County Phase - 1 Payment Notification
+payment.mail.body.received-notification=Payment of $$[payment-amount]/- received on $$[received-date] via transaction no. / cheque no. $$[cheque-no] for Green County Phase -1 Flat No. $$[flat-no].
+payment.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
+
+
+payment.sms.enabled=true
+#payment.sms.api-key=g45rZk3objA-XE55BlT2UK7umdBaoHd0tlfjsSg3W4
+payment.sms.api-key=g45rZk3objA-XE
+payment.sms.sender=GRCOP1
+payment.sms.body.received-notification=Payment of Rs. $$[payment-amount]/- for [flat-no] has been received on $$[received-date]. Credit is subjected to cheque clearance.
+payment.sms.body.thank-you-notification=- Green County Phase - 1 Co-op. Soc.
+payment.sms.test-local-url=https://api.textlocal.in/send/
