Refactoring properties, VO for text local response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
+payment.sms.text-local-url=https://api.textlocal.in/send/
+
 member-details.cell.flat-no=0
 member-details.cell.mobile-no=1
 member-details.cell.email-id=2
