Moving to business mantra

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,9 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-payment.sms.text-local-url=https://api.textlocal.in/send/
+payment.sms.business-mantra-url=http://www.businessmantra.mobi/vendorsms/pushsms.aspx
+payment.sms.flash-param=0
+payment.sms.gwid-param=2
 
 member-details.cell.flat-no=0
 member-details.cell.mobile-no=1
