--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -8,9 +8,6 @@ payment.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-o
 
 
 payment.sms.enabled=true
-#payment.sms.api-key=g45rZk3objA-XE55BlT2UK7umdBaoHd0tlfjsSg3W4
-payment.sms.api-key=g45rZk3objA-XE
-payment.sms.sender=GRCOP1
-payment.sms.body.received-notification=Payment of Rs. $$[payment-amount]/- for [flat-no] has been received on $$[received-date]. Credit is subjected to cheque clearance.
+payment.sms.sender=GCOCHS
+payment.sms.body.received-notification=Payment of Rs. $$[payment-amount]/- for $$[flat-no] has been received on $$[received-date]. Credit is subjected to cheque clearance.
 payment.sms.body.thank-you-notification=- Green County Phase - 1 Co-op. Soc.
-payment.sms.test-local-url=https://api.textlocal.in/send/
