Setting default member file path

--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -11,3 +11,6 @@ payment.sms.enabled=true
 payment.sms.sender=GCOCHS
 payment.sms.body.received-notification=Payment of Rs. $$[payment-amount]/- for $$[flat-no] has been received on $$[received-date]. Credit is subjected to cheque clearance.
 payment.sms.body.thank-you-notification=- Green County Phase - 1 Co-op. Soc.
+
+
+default.member.file-path=/Users/agarwalsh/Desktop/00MemberDetails.xls
