--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
 			</plugin>
 		</plugins>
 
-		<resources>
+		<!-- <resources>
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
@@ -117,7 +117,7 @@
 					<exclude>payment-notifier.properties</exclude>
 				</excludes>
 			</resource>
-		</resources>
+		</resources> -->
 	</build>
 
 </project>
