Refactoring email and sms senders

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,8 @@ spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
 
-payment.sms.business-mantra-url=http://www.businessmantra.mobi/vendorsms/pushsms.aspx
-payment.sms.flash-param=0
-payment.sms.gwid-param=2
+business-mantra-url=http://www.businessmantra.mobi/vendorsms/pushsms.aspx
+payment.sms.business-mantra-url=${business-mantra-url}?fl=0&gwid=2&user={user}&password={password}&msisdn={msisdn}&sid={sid}&msg={msg}
 
 member-details.cell.flat-no=0
 member-details.cell.mobile-no=1
