Adding pending notifications tab

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,4 +23,10 @@ payment-details.cell.cheque-no-cell=5
 payment-details.cell.flat-no-cell=15
 payment-details.cell.max-cells=16
 
+
+pending-details.cell.amount-cell=4
+pending-details.cell.flat-no-cell=15
+pending-details.cell.max-cells=16
+
+
 logging.path=./logs
