--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -3,7 +3,7 @@
 
 payment.mail.enabled=true
 payment.mail.subject=Green County Phase - 1 Payment Notification
-payment.mail.body.received-notification=Payment of $$[payment-amount]/- received on $$[received-date] via transaction no. / cheque no. $$[cheque-no] for Green County Phase -1 Flat No. $$[flat-no]. Entry voucher no. $$[voucher-no].
+payment.mail.body.received-notification=Payment of Rs. $$[payment-amount]/- received on $$[received-date] via transaction no. / cheque no. $$[cheque-no] for Green County Phase -1 Flat No. $$[flat-no]. Entry voucher no. $$[voucher-no].
 payment.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
 
 
@@ -11,6 +11,21 @@ payment.sms.enabled=true
 payment.sms.sender=GCOCHS
 payment.sms.body.received-notification=Payment of Rs.$$[payment-amount]/- for $$[flat-no] has been rcvd. on $$[received-date], vchr. no. $$[voucher-no]. Credit is subjected to chq. clearance.
 payment.sms.body.thank-you-notification=- Green County Ph-1 Co. Hsg. Soc.
+
+
+# place-holders
+# $$[pending-amount]  $$[pending-date]   $$[flat-no]
+
+pending.mail.enabled=true
+pending.mail.subject=Green County Phase - 1 Payment Notification
+pending.mail.body.received-notification=Payment of Rs. $$[pending-amount]/- pending as on $$[pending-date] for Green County Phase -1 Flat No. $$[flat-no]. Prompt payment will avoid penalty.
+pending.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
+
+
+pending.sms.enabled=true
+pending.sms.sender=GCOCHS
+pending.sms.body.received-notification=Payment of Rs.$$[pending-amount]/- for $$[flat-no] is pending as on $$[pending-date]. Prompt payment will avoid penalty.
+pending.sms.body.thank-you-notification=- Green County Ph-1 Co. Hsg. Soc.
 
 
 default.member.file-path=/Users/agarwalsh/Desktop/00MemberDetails.xls
