--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,23 +10,29 @@ spring.mail.properties.mail.smtp.writetimeout=5000
 business-mantra-url=http://www.businessmantra.mobi/vendorsms/pushsms.aspx
 payment.sms.business-mantra-url=${business-mantra-url}?fl=0&gwid=2&user={user}&password={password}&msisdn={msisdn}&sid={sid}&msg={msg}
 
-member-details.cell.flat-no=0
-member-details.cell.mobile-no=1
-member-details.cell.email-id=2
-member-details.cell.max-cells=3
+
+member-details.sheet.cell.flat-no-cell=0
+member-details.sheet.cell.mobile-no-cell=1
+member-details.sheet.cell.email-id-cell=2
+member-details.sheet.cell.max-cells=3
+member-details.sheet.skip-rows=1
 
 
-payment-details.cell.voucher-no-cell=2
-payment-details.cell.rcvd-date-cell=3
-payment-details.cell.amount-cell=4
-payment-details.cell.cheque-no-cell=5
-payment-details.cell.flat-no-cell=15
-payment-details.cell.max-cells=16
+
+payment-details.sheet.cell.voucher-no-cell=2
+payment-details.sheet.cell.rcvd-date-cell=3
+payment-details.sheet.cell.amount-cell=4
+payment-details.sheet.cell.cheque-no-cell=5
+payment-details.sheet.cell.flat-no-cell=15
+payment-details.sheet.cell.max-cells=16
+payment-details.sheet.skip-rows=2
 
 
-pending-details.cell.amount-cell=4
-pending-details.cell.flat-no-cell=15
-pending-details.cell.max-cells=16
+
+pending-details.sheet.cell.amount-cell=4
+pending-details.sheet.cell.flat-no-cell=15
+pending-details.sheet.cell.max-cells=16
+pending-details.sheet.skip-rows=2
 
 
 logging.path=./logs
