--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,12 @@
 	<parent>
 		<groupId>io.spring.platform</groupId>
 		<artifactId>platform-bom</artifactId>
-		<version>Brussels-SR5</version>
+		<version>Brussels-SR6</version>
 	</parent>
 
 	<properties>
 		<java.version>1.8</java.version>
 		<date-picker.version>1.3.4</date-picker.version>
-		<poi.version>3.7</poi.version>
 		<logstash.logback.encoder.version>4.11</logstash.logback.encoder.version>
 	</properties>
 
@@ -55,6 +54,10 @@
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-ooxml</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -106,7 +109,7 @@
 			</plugin>
 		</plugins>
 
-		<!-- <resources>
+		<!--<resources>
 			<resource>
 				<filtering>true</filtering>
 				<directory>src/main/resources</directory>
@@ -117,7 +120,7 @@
 					<exclude>payment-notifier.properties</exclude>
 				</excludes>
 			</resource>
-		</resources> -->
+		</resources>-->
 	</build>
 
 </project>
