--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -7,7 +7,7 @@ mail.cc-to=greencounty1@gmail.com
 payment.mail.enabled=true
 payment.mail.reply-to=${mail.reply-to}
 payment.mail.cc-to=${mail.cc-to}
-payment.mail.subject=Green County Phase - 1 Payment Notification
+payment.mail.subject=Green County Phase - 1 Payment Notification [$$[flat-no]]
 payment.mail.body.received-notification=Payment of Rs. $$[payment-amount]/- received on $$[received-date] via transaction no. / cheque no. $$[cheque-no] for Green County Phase -1 Flat No. $$[flat-no]. Entry voucher no. $$[voucher-no].
 payment.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
 
@@ -24,7 +24,7 @@ payment.sms.body.thank-you-notification=- Green County Ph-1 Co. Hsg. Soc.
 pending.mail.enabled=true
 pending.mail.reply-to=${mail.reply-to}
 pending.mail.cc-to=${mail.cc-to}
-pending.mail.subject=Green County Phase - 1 Payment Notification
+pending.mail.subject=Green County Phase - 1 Payment Notification [$$[flat-no]]
 pending.mail.body.received-notification=Payment of Rs. $$[pending-amount]/- pending as on $$[pending-date] for Green County Phase -1 Flat No. $$[flat-no]. Prompt payment will avoid penalty.
 pending.mail.body.thank-you-notification=Thank you,\nGreen County Phase - 1 Co-operative Housing Society
 
