Added to date for payments, loading xls and xlsx, showing total notifs

--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -35,7 +35,9 @@ pending.sms.body.received-notification=Payment of Rs.$$[pending-amount]/- for $$
 pending.sms.body.thank-you-notification=- Green County Ph-1 Co. Hsg. Soc.
 
 
-default.member.file-path=/Users/agarwalsh/Desktop/00MemberDetails.xls
+default.member.file-path=/Users/agarwalsh/report/00MemberDetails.xls
+default.payment.file-path=/Users/agarwalsh/report/Payments.xlsx
+default.outstanding.file-path=/Users/agarwalsh/report/Outstanding.xlsx
 
 
 
