Adding JPA for notification persistence

--- a/src/main/resources/payment-notifier.properties
+++ b/src/main/resources/payment-notifier.properties
@@ -44,3 +44,6 @@ default.outstanding.file-path=/Users/agarwalsh/report/Outstanding.xlsx
 login.single-window.enabled=true
 login.single-window.email-user=greencounty1.notice
 login.single-window.sms-user=greencounty
+
+
+h2.database.path=/Users/agarwash/PlaygroundWorkspace/payment-notifier/testdb/payment-notifier
