--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,10 @@ pending-details.sheet.skip-rows=4
 
 
 logging.path=./logs
+
+
+# Datasource
+spring.datasource.url=jdbc:h2:file:${h2.database.path}
+spring.datasource.username=sa
+spring.datasource.password=
+spring.datasource.driver-class-name=org.h2.Driver
