Adding message persistence

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,3 +43,5 @@ spring.datasource.url=jdbc:h2:file:${h2.database.path}
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
+
+logging.level.org.hibernate.SQL=debug
